# dockerize-everything

./: .gitignore  AUTHORS  README.md
blog/: .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.dev.yaml  docker-compose.yaml
blog/migrations/2024-01-30-102640_posts/: up.sql
blog/src/: main.rs  schema.rs
blog/src/models/: mod.rs
blog/src/services/: mod.rs
blog/templates/: base.html.hbs  post.html.hbs  posts.html.hbs
restaurant-website/: .env  Dockerfile  README.md  composer.json  docker-compose.yaml
restaurant-website/.docker/nginx/: grilli.com.conf
restaurant-website/assets/styles/: app.css
restaurant-website/src/Controller/: RestaurantController.php
restaurant-website/templates/: base.html.twig
restaurant-website/templates/restaurant/: index.html.twig
tv-shows-catalog/: .env  README.md  default.conf  docker-compose.yaml
tv-shows-catalog/client/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
tv-shows-catalog/client/src/lib/components/: TvShowCard.svelte
tv-shows-catalog/client/src/lib/types/: tv-show-summary.interface.ts  tv-show.interface.ts
tv-shows-catalog/client/src/routes/: +layout.svelte  +page.server.ts  +page.svelte
tv-shows-catalog/server/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
tv-shows-catalog/server/src/: app.module.ts  main.ts
tv-shows-catalog/server/src/tv-shows/: tv-shows.controller.spec.ts  tv-shows.controller.ts  tv-shows.module.ts  tv-shows.service.spec.ts  tv-shows.service.ts
tv-shows-catalog/server/src/tv-shows/dto/: find-one-tv-show-params.dto.ts
(+5 files in other folders)
