[package]
name = "blog"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "2.1.0", features = ["postgres"] }
dotenvy = "0.15"
rocket = { version = "0.5.0", features=["json"] }
serde = "1.0.196"

[dependencies.rocket_dyn_templates]
version = "0.1.0"
features = ["handlebars"]

[dependencies.rocket_contrib]
version = "0.4.10"
default-features = false
features = ["json"]
